  (it prevents 'scum and destroy' cheeze)
- destruction/earthquake erase the traps buried in walls.
- KILL_DEMON and KILL_UNDEAD implemented (they weren't!)
- monsters avoid to stand just N/E/S/W to the player
- player can try to disarm already-found traps by stepping onto it.
- DOOR_BUMP_OPEN is more detailed now. (better client option, of course)
[H] Potion of Infravision gives +50ft infravision in place of +10ft


** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
things to do before 4.0.0

- backport ToME spells!
- implement guest-account
- rebalance skill-points
- devise a nice way to control ego-item generation w/o luck
- fix gfx
- refine pk code
- source-code cleanup
- sort ?_info.txt (they are quite messy now)
- export configurable things to tomenet.cfg
- a spoonful of documentation for skill system

(multi-dungeon, multi-town, terrains, pets etc. are put off after 4.0.0 ...)


=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  * a mage would just raise 'Sorcery' to 10 for Wraithform..
    is it within the design?
- LUA hook
- csfunc
- alignment (let's wait for EE :)

=============================================================================
below this line are the unfixed bugs known:

[B] House doors are still said to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B][C] chat-history contains lines with 'mindcrafter'.