@@ -1250,7 +1250,9 @@ To find the latest change quickly, search ==== :)
 - monsters avoid to stand just N/E/S/W to the player
 - player can try to disarm already-found traps by stepping onto it.
 - DOOR_BUMP_OPEN is more detailed now. (better client option, of course)
+- garbled monster names when hallucinating.
 [H] Potion of Infravision gives +50ft infravision in place of +10ft
+[H] cheapest items (like spike) won't be {on sale}. {10% off} added.
 
 
 ** [B] stands for Bugfix.
